# NeuralMarket

./: .env.example  .env.production  .gitignore  .vercelignore  ARCHITECTURE_BLUEPRINT.md  AUDIT_FULL_REPORT.md  AUDIT_STATUS_FINAL.md  DEMO_SCRIPT.md  DEPLOYMENT_LOGS.md  DEPLOYMENT_SUMMARY.md  Dockerfile.frontend  FILE_INDEX.md  FRONTEND_ARCHITECTURE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_QUICK_START.md  GRANT_READINESS_CHECKLIST.md  GRANT_STATUS.md  IMPLEMENTATION_CHECKLIST.md  KALSHI_APPLICATION.md  KALSHI_INTEGRATION_CHECKLIST.md  KALSHI_INTEGRATION_GUIDE.md  KALSHI_INTEGRATION_SUMMARY.md  KALSHI_QUICK_REFERENCE.md  Modelfile  NEURAL_MARKET.md  NEURAL_MARKET_V2_ARCHITECTURE.md  NPM_PUBLISH_COMMANDS.md  PITCH_SOLANA_MX.md  PRODUCTION_DEPLOYMENT_READY.md  PROJECT_AUDIT_REPORT.md  QA_REPORT.md  QUICKSTART.md  README-es.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TECHNICAL_PAPER-es.md  TESTING_GUIDE.md  VIDEO_SCRIPT.md  docker-compose.yml  (+11 more)
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
anchor/programs/neural_vault/: Cargo.toml
anchor/programs/neural_vault/src/: lib.rs  vault.rs
app/: globals.css  layout.tsx  page.tsx
context/: LanguageContext.tsx
docs/: LOCAL_AI_SETUP.md  MAINNET_SECURITY.md  PRODUCTION_READINESS_AUDIT.md
e2e/: agents.spec.ts  governance.spec.ts  homepage.spec.ts  leaderboard.spec.ts  legal.spec.ts  markets.spec.ts  navigation.spec.ts  portfolio.spec.ts  seo.spec.ts
hooks/: useAgentActions.ts  useAgentHistory.ts  useAgentRoster.ts  useAgentStream.ts  useGovernance.ts  useJupiterSwap.tsx  (+9 more)
(+178 files in other folders)
