[package]
name = "neural_vault"
version = "0.1.0"
description = "Neural Market Vault Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neural_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-token = { version = "6", features = ["no-entrypoint"] }
